Ply/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    STATIC

Grammar

Rule 0     S' -> toplevelgroup
Rule 1     toplevelgroup -> funcdecl toplevelgroup
Rule 2     toplevelgroup -> funcdef toplevelgroup
Rule 3     toplevelgroup -> globalvardecl toplevelgroup
Rule 4     toplevelgroup -> empty
Rule 5     funcdecl -> type IDENTIFIER LPAREN argdecllist RPAREN SEMICOLON
Rule 6     funcdef -> type IDENTIFIER LPAREN argdecllist RPAREN LBRACE statementlist RBRACE
Rule 7     type -> INT
Rule 8     type -> FLOAT
Rule 9     type -> STRING
Rule 10    type -> VOID
Rule 11    type -> IDENTIFIER
Rule 12    argdecllist -> empty
Rule 13    argdecllist -> argdecl
Rule 14    argdecllist -> argdecl COMMA argdecllist
Rule 15    argdecl -> type IDENTIFIER
Rule 16    empty -> <empty>
Rule 17    arglist -> empty
Rule 18    arglist -> expression
Rule 19    arglist -> expression COMMA arglist
Rule 20    globalvardecl -> type IDENTIFIER SEMICOLON
Rule 21    globalvardecl -> CONST type IDENTIFIER ASSIGN expression SEMICOLON
Rule 22    globalvardecl -> type IDENTIFIER ASSIGN expression SEMICOLON
Rule 23    statementlist -> empty
Rule 24    statementlist -> statement statementlist
Rule 25    statement -> expression SEMICOLON
Rule 26    statement -> ifelse
Rule 27    statement -> RETURN expression SEMICOLON
Rule 28    statement -> RETURN SEMICOLON
Rule 29    statement -> type IDENTIFIER SEMICOLON
Rule 30    statement -> type IDENTIFIER ASSIGN expression SEMICOLON
Rule 31    statement -> CONST type IDENTIFIER ASSIGN expression SEMICOLON
Rule 32    statement -> LOOP LBRACE statementlist RBRACE
Rule 33    statement -> BREAK SEMICOLON
Rule 34    statement -> WHILE LPAREN expression RPAREN LBRACE statementlist RBRACE
Rule 35    statement -> IDENTIFIER ASSIGN expression SEMICOLON
Rule 36    expression -> LPAREN expression RPAREN
Rule 37    expression -> IDENTIFIER LPAREN arglist RPAREN
Rule 38    expression -> expression ISEQUAL expression
Rule 39    expression -> expression NOTEQUAL expression
Rule 40    expression -> expression LESSTHAN expression
Rule 41    expression -> expression GREATERTHAN expression
Rule 42    expression -> expression LESSEQUAL expression
Rule 43    expression -> expression GREATEREQUAL expression
Rule 44    expression -> expression LOGICAND expression
Rule 45    expression -> expression LOGICOR expression
Rule 46    expression -> expression PLUS expression
Rule 47    expression -> expression MINUS expression
Rule 48    expression -> expression TIMES expression
Rule 49    expression -> expression DIVIDE expression
Rule 50    expression -> IDENTIFIER
Rule 51    expression -> MINUS expression
Rule 52    expression -> NUMBER
Rule 53    elifgroup -> empty
Rule 54    elifgroup -> ELIF LPAREN expression RPAREN LBRACE statementlist RBRACE elifgroup
Rule 55    optelse -> empty
Rule 56    optelse -> ELSE LBRACE statementlist RBRACE
Rule 57    ifelse -> IF LPAREN expression RPAREN LBRACE statementlist RBRACE elifgroup optelse

Terminals, with rules where they appear

ASSIGN               : 21 22 30 31 35
BREAK                : 33
COMMA                : 14 19
CONST                : 21 31
DIVIDE               : 49
ELIF                 : 54
ELSE                 : 56
FLOAT                : 8
GREATEREQUAL         : 43
GREATERTHAN          : 41
IDENTIFIER           : 5 6 11 15 20 21 22 29 30 31 35 37 50
IF                   : 57
INT                  : 7
ISEQUAL              : 38
LBRACE               : 6 32 34 54 56 57
LESSEQUAL            : 42
LESSTHAN             : 40
LOGICAND             : 44
LOGICOR              : 45
LOOP                 : 32
LPAREN               : 5 6 34 36 37 54 57
MINUS                : 47 51
NOTEQUAL             : 39
NUMBER               : 52
PLUS                 : 46
RBRACE               : 6 32 34 54 56 57
RETURN               : 27 28
RPAREN               : 5 6 34 36 37 54 57
SEMICOLON            : 5 20 21 22 25 27 28 29 30 31 33 35
STATIC               : 
STRING               : 9
TIMES                : 48
VOID                 : 10
WHILE                : 34
error                : 

Nonterminals, with rules where they appear

argdecl              : 13 14
argdecllist          : 5 6 14
arglist              : 19 37
elifgroup            : 54 57
empty                : 4 12 17 23 53 55
expression           : 18 19 21 22 25 27 30 31 34 35 36 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 51 54 57
funcdecl             : 1
funcdef              : 2
globalvardecl        : 3
ifelse               : 26
optelse              : 57
statement            : 24
statementlist        : 6 24 32 34 54 56 57
toplevelgroup        : 1 2 3 0
type                 : 5 6 15 20 21 22 29 30 31

Parsing method: LALR

state 0

    (0) S' -> . toplevelgroup
    (1) toplevelgroup -> . funcdecl toplevelgroup
    (2) toplevelgroup -> . funcdef toplevelgroup
    (3) toplevelgroup -> . globalvardecl toplevelgroup
    (4) toplevelgroup -> . empty
    (5) funcdecl -> . type IDENTIFIER LPAREN argdecllist RPAREN SEMICOLON
    (6) funcdef -> . type IDENTIFIER LPAREN argdecllist RPAREN LBRACE statementlist RBRACE
    (20) globalvardecl -> . type IDENTIFIER SEMICOLON
    (21) globalvardecl -> . CONST type IDENTIFIER ASSIGN expression SEMICOLON
    (22) globalvardecl -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (16) empty -> .
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . STRING
    (10) type -> . VOID
    (11) type -> . IDENTIFIER

    CONST           shift and go to state 7
    $end            reduce using rule 16 (empty -> .)
    INT             shift and go to state 2
    FLOAT           shift and go to state 1
    STRING          shift and go to state 12
    VOID            shift and go to state 5
    IDENTIFIER      shift and go to state 8

    funcdecl                       shift and go to state 3
    toplevelgroup                  shift and go to state 4
    funcdef                        shift and go to state 6
    type                           shift and go to state 9
    globalvardecl                  shift and go to state 10
    empty                          shift and go to state 11

state 1

    (8) type -> FLOAT .

    IDENTIFIER      reduce using rule 8 (type -> FLOAT .)


state 2

    (7) type -> INT .

    IDENTIFIER      reduce using rule 7 (type -> INT .)


state 3

    (1) toplevelgroup -> funcdecl . toplevelgroup
    (1) toplevelgroup -> . funcdecl toplevelgroup
    (2) toplevelgroup -> . funcdef toplevelgroup
    (3) toplevelgroup -> . globalvardecl toplevelgroup
    (4) toplevelgroup -> . empty
    (5) funcdecl -> . type IDENTIFIER LPAREN argdecllist RPAREN SEMICOLON
    (6) funcdef -> . type IDENTIFIER LPAREN argdecllist RPAREN LBRACE statementlist RBRACE
    (20) globalvardecl -> . type IDENTIFIER SEMICOLON
    (21) globalvardecl -> . CONST type IDENTIFIER ASSIGN expression SEMICOLON
    (22) globalvardecl -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (16) empty -> .
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . STRING
    (10) type -> . VOID
    (11) type -> . IDENTIFIER

    CONST           shift and go to state 7
    $end            reduce using rule 16 (empty -> .)
    INT             shift and go to state 2
    FLOAT           shift and go to state 1
    STRING          shift and go to state 12
    VOID            shift and go to state 5
    IDENTIFIER      shift and go to state 8

    funcdecl                       shift and go to state 3
    toplevelgroup                  shift and go to state 13
    funcdef                        shift and go to state 6
    type                           shift and go to state 9
    globalvardecl                  shift and go to state 10
    empty                          shift and go to state 11

state 4

    (0) S' -> toplevelgroup .



state 5

    (10) type -> VOID .

    IDENTIFIER      reduce using rule 10 (type -> VOID .)


state 6

    (2) toplevelgroup -> funcdef . toplevelgroup
    (1) toplevelgroup -> . funcdecl toplevelgroup
    (2) toplevelgroup -> . funcdef toplevelgroup
    (3) toplevelgroup -> . globalvardecl toplevelgroup
    (4) toplevelgroup -> . empty
    (5) funcdecl -> . type IDENTIFIER LPAREN argdecllist RPAREN SEMICOLON
    (6) funcdef -> . type IDENTIFIER LPAREN argdecllist RPAREN LBRACE statementlist RBRACE
    (20) globalvardecl -> . type IDENTIFIER SEMICOLON
    (21) globalvardecl -> . CONST type IDENTIFIER ASSIGN expression SEMICOLON
    (22) globalvardecl -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (16) empty -> .
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . STRING
    (10) type -> . VOID
    (11) type -> . IDENTIFIER

    CONST           shift and go to state 7
    $end            reduce using rule 16 (empty -> .)
    INT             shift and go to state 2
    FLOAT           shift and go to state 1
    STRING          shift and go to state 12
    VOID            shift and go to state 5
    IDENTIFIER      shift and go to state 8

    funcdecl                       shift and go to state 3
    toplevelgroup                  shift and go to state 14
    funcdef                        shift and go to state 6
    type                           shift and go to state 9
    globalvardecl                  shift and go to state 10
    empty                          shift and go to state 11

state 7

    (21) globalvardecl -> CONST . type IDENTIFIER ASSIGN expression SEMICOLON
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . STRING
    (10) type -> . VOID
    (11) type -> . IDENTIFIER

    INT             shift and go to state 2
    FLOAT           shift and go to state 1
    STRING          shift and go to state 12
    VOID            shift and go to state 5
    IDENTIFIER      shift and go to state 8

    type                           shift and go to state 15

state 8

    (11) type -> IDENTIFIER .

    IDENTIFIER      reduce using rule 11 (type -> IDENTIFIER .)


state 9

    (5) funcdecl -> type . IDENTIFIER LPAREN argdecllist RPAREN SEMICOLON
    (6) funcdef -> type . IDENTIFIER LPAREN argdecllist RPAREN LBRACE statementlist RBRACE
    (20) globalvardecl -> type . IDENTIFIER SEMICOLON
    (22) globalvardecl -> type . IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER      shift and go to state 16


state 10

    (3) toplevelgroup -> globalvardecl . toplevelgroup
    (1) toplevelgroup -> . funcdecl toplevelgroup
    (2) toplevelgroup -> . funcdef toplevelgroup
    (3) toplevelgroup -> . globalvardecl toplevelgroup
    (4) toplevelgroup -> . empty
    (5) funcdecl -> . type IDENTIFIER LPAREN argdecllist RPAREN SEMICOLON
    (6) funcdef -> . type IDENTIFIER LPAREN argdecllist RPAREN LBRACE statementlist RBRACE
    (20) globalvardecl -> . type IDENTIFIER SEMICOLON
    (21) globalvardecl -> . CONST type IDENTIFIER ASSIGN expression SEMICOLON
    (22) globalvardecl -> . type IDENTIFIER ASSIGN expression SEMICOLON
    (16) empty -> .
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . STRING
    (10) type -> . VOID
    (11) type -> . IDENTIFIER

    CONST           shift and go to state 7
    $end            reduce using rule 16 (empty -> .)
    INT             shift and go to state 2
    FLOAT           shift and go to state 1
    STRING          shift and go to state 12
    VOID            shift and go to state 5
    IDENTIFIER      shift and go to state 8

    funcdecl                       shift and go to state 3
    toplevelgroup                  shift and go to state 17
    funcdef                        shift and go to state 6
    type                           shift and go to state 9
    globalvardecl                  shift and go to state 10
    empty                          shift and go to state 11

state 11

    (4) toplevelgroup -> empty .

    $end            reduce using rule 4 (toplevelgroup -> empty .)


state 12

    (9) type -> STRING .

    IDENTIFIER      reduce using rule 9 (type -> STRING .)


state 13

    (1) toplevelgroup -> funcdecl toplevelgroup .

    $end            reduce using rule 1 (toplevelgroup -> funcdecl toplevelgroup .)


state 14

    (2) toplevelgroup -> funcdef toplevelgroup .

    $end            reduce using rule 2 (toplevelgroup -> funcdef toplevelgroup .)


state 15

    (21) globalvardecl -> CONST type . IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER      shift and go to state 18


state 16

    (5) funcdecl -> type IDENTIFIER . LPAREN argdecllist RPAREN SEMICOLON
    (6) funcdef -> type IDENTIFIER . LPAREN argdecllist RPAREN LBRACE statementlist RBRACE
    (20) globalvardecl -> type IDENTIFIER . SEMICOLON
    (22) globalvardecl -> type IDENTIFIER . ASSIGN expression SEMICOLON

    LPAREN          shift and go to state 20
    SEMICOLON       shift and go to state 19
    ASSIGN          shift and go to state 21


state 17

    (3) toplevelgroup -> globalvardecl toplevelgroup .

    $end            reduce using rule 3 (toplevelgroup -> globalvardecl toplevelgroup .)


state 18

    (21) globalvardecl -> CONST type IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 22


state 19

    (20) globalvardecl -> type IDENTIFIER SEMICOLON .

    CONST           reduce using rule 20 (globalvardecl -> type IDENTIFIER SEMICOLON .)
    INT             reduce using rule 20 (globalvardecl -> type IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 20 (globalvardecl -> type IDENTIFIER SEMICOLON .)
    STRING          reduce using rule 20 (globalvardecl -> type IDENTIFIER SEMICOLON .)
    VOID            reduce using rule 20 (globalvardecl -> type IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 20 (globalvardecl -> type IDENTIFIER SEMICOLON .)
    $end            reduce using rule 20 (globalvardecl -> type IDENTIFIER SEMICOLON .)


state 20

    (5) funcdecl -> type IDENTIFIER LPAREN . argdecllist RPAREN SEMICOLON
    (6) funcdef -> type IDENTIFIER LPAREN . argdecllist RPAREN LBRACE statementlist RBRACE
    (12) argdecllist -> . empty
    (13) argdecllist -> . argdecl
    (14) argdecllist -> . argdecl COMMA argdecllist
    (16) empty -> .
    (15) argdecl -> . type IDENTIFIER
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . STRING
    (10) type -> . VOID
    (11) type -> . IDENTIFIER

    RPAREN          reduce using rule 16 (empty -> .)
    INT             shift and go to state 2
    FLOAT           shift and go to state 1
    STRING          shift and go to state 12
    VOID            shift and go to state 5
    IDENTIFIER      shift and go to state 8

    argdecllist                    shift and go to state 23
    type                           shift and go to state 25
    empty                          shift and go to state 26
    argdecl                        shift and go to state 24

state 21

    (22) globalvardecl -> type IDENTIFIER ASSIGN . expression SEMICOLON
    (36) expression -> . LPAREN expression RPAREN
    (37) expression -> . IDENTIFIER LPAREN arglist RPAREN
    (38) expression -> . expression ISEQUAL expression
    (39) expression -> . expression NOTEQUAL expression
    (40) expression -> . expression LESSTHAN expression
    (41) expression -> . expression GREATERTHAN expression
    (42) expression -> . expression LESSEQUAL expression
    (43) expression -> . expression GREATEREQUAL expression
    (44) expression -> . expression LOGICAND expression
    (45) expression -> . expression LOGICOR expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . IDENTIFIER
    (51) expression -> . MINUS expression
    (52) expression -> . NUMBER

    LPAREN          shift and go to state 29
    IDENTIFIER      shift and go to state 30
    MINUS           shift and go to state 28
    NUMBER          shift and go to state 27

    expression                     shift and go to state 31

state 22

    (21) globalvardecl -> CONST type IDENTIFIER ASSIGN . expression SEMICOLON
    (36) expression -> . LPAREN expression RPAREN
    (37) expression -> . IDENTIFIER LPAREN arglist RPAREN
    (38) expression -> . expression ISEQUAL expression
    (39) expression -> . expression NOTEQUAL expression
    (40) expression -> . expression LESSTHAN expression
    (41) expression -> . expression GREATERTHAN expression
    (42) expression -> . expression LESSEQUAL expression
    (43) expression -> . expression GREATEREQUAL expression
    (44) expression -> . expression LOGICAND expression
    (45) expression -> . expression LOGICOR expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . IDENTIFIER
    (51) expression -> . MINUS expression
    (52) expression -> . NUMBER

    LPAREN          shift and go to state 29
    IDENTIFIER      shift and go to state 30
    MINUS           shift and go to state 28
    NUMBER          shift and go to state 27

    expression                     shift and go to state 32

state 23

    (5) funcdecl -> type IDENTIFIER LPAREN argdecllist . RPAREN SEMICOLON
    (6) funcdef -> type IDENTIFIER LPAREN argdecllist . RPAREN LBRACE statementlist RBRACE

    RPAREN          shift and go to state 33


state 24

    (13) argdecllist -> argdecl .
    (14) argdecllist -> argdecl . COMMA argdecllist

    RPAREN          reduce using rule 13 (argdecllist -> argdecl .)
    COMMA           shift and go to state 34


state 25

    (15) argdecl -> type . IDENTIFIER

    IDENTIFIER      shift and go to state 35


state 26

    (12) argdecllist -> empty .

    RPAREN          reduce using rule 12 (argdecllist -> empty .)


state 27

    (52) expression -> NUMBER .

    SEMICOLON       reduce using rule 52 (expression -> NUMBER .)
    ISEQUAL         reduce using rule 52 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 52 (expression -> NUMBER .)
    LESSTHAN        reduce using rule 52 (expression -> NUMBER .)
    GREATERTHAN     reduce using rule 52 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 52 (expression -> NUMBER .)
    GREATEREQUAL    reduce using rule 52 (expression -> NUMBER .)
    LOGICAND        reduce using rule 52 (expression -> NUMBER .)
    LOGICOR         reduce using rule 52 (expression -> NUMBER .)
    PLUS            reduce using rule 52 (expression -> NUMBER .)
    MINUS           reduce using rule 52 (expression -> NUMBER .)
    TIMES           reduce using rule 52 (expression -> NUMBER .)
    DIVIDE          reduce using rule 52 (expression -> NUMBER .)
    RPAREN          reduce using rule 52 (expression -> NUMBER .)
    COMMA           reduce using rule 52 (expression -> NUMBER .)


state 28

    (51) expression -> MINUS . expression
    (36) expression -> . LPAREN expression RPAREN
    (37) expression -> . IDENTIFIER LPAREN arglist RPAREN
    (38) expression -> . expression ISEQUAL expression
    (39) expression -> . expression NOTEQUAL expression
    (40) expression -> . expression LESSTHAN expression
    (41) expression -> . expression GREATERTHAN expression
    (42) expression -> . expression LESSEQUAL expression
    (43) expression -> . expression GREATEREQUAL expression
    (44) expression -> . expression LOGICAND expression
    (45) expression -> . expression LOGICOR expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . IDENTIFIER
    (51) expression -> . MINUS expression
    (52) expression -> . NUMBER

    LPAREN          shift and go to state 29
    IDENTIFIER      shift and go to state 30
    MINUS           shift and go to state 28
    NUMBER          shift and go to state 27

    expression                     shift and go to state 36

state 29

    (36) expression -> LPAREN . expression RPAREN
    (36) expression -> . LPAREN expression RPAREN
    (37) expression -> . IDENTIFIER LPAREN arglist RPAREN
    (38) expression -> . expression ISEQUAL expression
    (39) expression -> . expression NOTEQUAL expression
    (40) expression -> . expression LESSTHAN expression
    (41) expression -> . expression GREATERTHAN expression
    (42) expression -> . expression LESSEQUAL expression
    (43) expression -> . expression GREATEREQUAL expression
    (44) expression -> . expression LOGICAND expression
    (45) expression -> . expression LOGICOR expression
    (46) expression -> . expression PLUS expression
    (47) expression -> . expression MINUS expression
    (48) expression -> . expression TIMES expression
    (49) expression -> . expression DIVIDE expression
    (50) expression -> . IDENTIFIER
    (51) expression -> . MINUS expression
    (52) expression -> . NUMBER

    LPAREN          shift and go to state 29
    IDENTIFIER      shift and go to state 30
    MINUS           shift and go to state 28
    NUMBER          shift and go to state 27

    expression                     shift and go to state 37

state 30

    (37) expression -> IDENTIFIER . LPAREN arglist RPAREN
    (50) expression -> IDENTIFIER .
